--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "homepage": "http://ankitzm.co/solana-shadi",
-  "name": "solana-shadi",
+  "homepage": "http://ankitzm.co/solana-wedding",
+  "name": "solana-wedding",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
