--- a/package.json
+++ b/package.json
@@ -1,4 +1,5 @@
 {
+  "homepage": "http://ankitzm.co/solana-wedding",
   "name": "solana-wedding",
   "version": "0.1.0",
   "private": true,
@@ -23,6 +24,8 @@
     "test": "react-scripts test",
     "eject": "react-scripts eject",
     "build:program-rust": "cargo build-bpf --manifest-path=./program-rust/Cargo.toml",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build"
   },
   "eslintConfig": {
     "extends": [
@@ -46,5 +49,6 @@
     "@types/react": "^17.0.21",
     "@types/react-dom": "^17.0.9",
     "@types/react-router-dom": "^5.1.9",
+    "gh-pages": "^3.2.3"
   }
 }
