Revert "nam eupdated"
This reverts commit 16186d40f4e7a143b1f041f058cd26920cd35448.

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "homepage": "http://ankitzm.co/solana-wedding",
-  "name": "solana-wedding",
+  "name": "client",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
