--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
   "homepage": "http://ankitzm.co/solana-wedding",
-  "name": "client",
+  "name": "solana-wedding",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@solana/web3.js": "^1.27.0",
+    "@solana/web3.js": "^1.24.1",
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
@@ -13,7 +13,7 @@
     "react": "^17.0.2",
     "react-component-export-image": "^1.0.6",
     "react-dom": "^17.0.2",
-    "react-router-dom": "^5.3.0",
+    "react-router-dom": "^5.2.1",
     "react-scripts": "4.0.3",
     "typescript": "^4.4.3",
     "web-vitals": "^1.1.2"
@@ -46,9 +46,9 @@
     ]
   },
   "devDependencies": {
-    "@types/react": "^17.0.21",
+    "@types/react": "^17.0.19",
     "@types/react-dom": "^17.0.9",
-    "@types/react-router-dom": "^5.1.9",
+    "@types/react-router-dom": "^5.1.8",
     "gh-pages": "^3.2.3"
   }
 }
