Revert "package update"
This reverts commit 63f9a3aaf923ed825dab2abc6cded5a5db56c751.

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "homepage": "http://ankitzm.co/solana-wedding",
-  "name": "solana-wedding",
+  "homepage": "http://ankitzm.co/solana-shadi",
+  "name": "solana-shadi",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
