--- a/package.json
+++ b/package.json
@@ -1,6 +1,5 @@
 {
-  "name": "solana-wedding",
-  "homepage": "https://ankitzm.co/solana-wedding/",
+  "name": "client",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
@@ -20,8 +19,6 @@
   },
   "scripts": {
     "start": "react-scripts start",
-    "predeploy": "npm run build",
-    "deploy": "gh-pages -d build",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
@@ -48,7 +45,6 @@
   "devDependencies": {
     "@types/react": "^17.0.19",
     "@types/react-dom": "^17.0.9",
-    "@types/react-router-dom": "^5.1.8",
-    "gh-pages": "^3.2.3"
+    "@types/react-router-dom": "^5.1.8"
   }
 }
