--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "name": "solana-wedding",
+  "homepage": "https://ankitzm.co/solana-wedding/",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
@@ -22,6 +23,8 @@
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "build:program-rust": "cargo build-bpf --manifest-path=./program-rust/Cargo.toml"
   },
   "eslintConfig": {
@@ -45,6 +48,7 @@
   "devDependencies": {
     "@types/react": "^17.0.19",
     "@types/react-dom": "^17.0.9",
-    "@types/react-router-dom": "^5.1.8"
+    "@types/react-router-dom": "^5.1.8",
+    "gh-pages": "^3.2.3"
   }
 }
